--- a/package.xml
+++ b/package.xml
@@ -18,6 +18,8 @@
   <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
 
   <depend condition="$ROS_VERSION == 2">rclcpp</depend>
+  <depend condition="$ROS_VERSION == 2">rclcpp_components</depend>
+
   <depend condition="$ROS_VERSION == 1">roscpp</depend>
 
   <depend>std_msgs</depend>
