--- a/package.xml
+++ b/package.xml
@@ -21,6 +21,7 @@
   <depend condition="$ROS_VERSION == 2">rclcpp_components</depend>
 
   <depend condition="$ROS_VERSION == 1">roscpp</depend>
+  <depend condition="$ROS_VERSION == 1">nodelet</depend>
 
   <depend>std_msgs</depend>
 
@@ -30,6 +31,8 @@
   <export>
     <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
     <build_type condition="$ROS_VERSION == 1">catkin</build_type>
+
+    <nodelet condition="$ROS_VERSION == 1" plugin="${prefix}/nodelet_plugins.xml" />
   </export>
 
 </package>
